--- a/Website/packages.config
+++ b/Website/packages.config
@@ -36,6 +36,7 @@
   <package id="QueryInterceptor" version="0.1.4237.2400" />
   <package id="recaptcha" version="1.0.5.0" targetFramework="net45" />
   <package id="RouteMagic" version="1.1.3" />
+  <package id="SyntaxHighlighter" version="3.0.83" targetFramework="net45" />
   <package id="System.Spatial" version="5.1.0" targetFramework="net45" />
   <package id="T4MVC" version="2.6.64" />
   <package id="WebActivator" version="1.4.4" />
